logs/microblog.log
2023-03-01 13:28:21,094 ERROR: Exception on /index [GET] [in /Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/app.py:1741]
Traceback (most recent call last):
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/app.py", line 2525, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/app.py", line 1822, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/app.py", line 1820, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/app.py", line 1796, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask_login/utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/app/routes.py", line 31, in index
    return render_template("index.html", title='Home Page', form=form, posts=posts)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/flask/templating.py", line 146, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 1010, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/Users/smirsepahi/Documents/Code/microblog/venv/lib/python3.11/site-packages/jinja2/environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/Users/smirsepahi/Documents/Code/microblog/app/templates/index.html", line 24, in template
    {% endfor %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endfor'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2023-03-01 13:29:56,839 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 13:30:40,437 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 13:33:50,175 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 13:34:47,863 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 14:33:13,911 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 14:38:18,780 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-01 14:40:18,268 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:17:53,597 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:20:45,566 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:21:10,441 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:21:36,689 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:23:15,840 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:26:24,632 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:31:40,314 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:32:51,483 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:43]
2023-03-02 13:48:45,797 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/microblog/app/__init__.py:45]
2023-04-04 20:55:15,439 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/EventIt/app/__init__.py:45]
2023-04-04 21:00:20,804 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/EventIt/app/__init__.py:45]
2023-04-05 13:24:46,982 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/EventIt/app/__init__.py:45]
2023-04-05 13:48:19,059 INFO: Microblog startup [in /Users/smirsepahi/Documents/Code/EventIt/app/__init__.py:45]
